fix(server): resolve all remaining PMD findings
Resource handling:
- CloseResource: restructure streams into try-with-resources
  (WChunkService, WLayerService/OverlayService, WSessionService
  redis cursor, SAssetService save/update/duplicate, Storage-,
  EChunk- and asset controllers, MongoStorageService duplicate,
  AssetDescriptionGeneratorExecutor)
- framework-managed streams (Spring ResourceHttpMessageConverter
  closes the response body) and deliberate explicit close in
  finally are documented with local suppressions
- RelianceOnDefaultCharset: UTF-8 for redis messages and the JSONL
  import/export pair

Exception handling:
- PreserveStackTrace: pass the caught exception as cause in ~55
  throw sites (MCP tools, job executors, workflow steps), add the
  missing DialogException(message, cause) constructor
- EmptyCatchBlock: comment the deliberate probe/fallback catches,
  restore the interrupt status in WorkflowService
- InvalidLogMessageFormat: fix broken {:.1f} placeholders and
  dropped log arguments
- rename Workflow.finalize() to completeWorkflow() (FinalizeOverloaded)

API correctness:
- Optional for getServerInfo, getAreaData and calculateRouteLevels;
  empty path for TerrainPathFinder.findPath
- UserId: add hashCode() and @Override on equals/hashCode
- WorkflowException casts for the (String) null workflowId
- literal-first String comparisons, Locale.ROOT for case
  conversions, char indexOf, isEmpty/isBlank, @Override,
  @FunctionalInterface and serialVersionUID where required
- thread context classloader for resource loading
- documented suppressions: identity comparisons (NOPMD), deliberate
  volatile/synchronized usage, reflection-based field copy, the
  password-derived AES key, loopback checks, WHexGrid matches()

Dead code:
- remove ~40 unused private methods, 6 unused fields, ~70 unused
  locals and write-only assignments (including their fallout),
  fix UselessPureMethodCall leftovers

PMD now passes with zero findings over the whole reactor.